# Hausaufgabe_3

./: LCFS-PR.h  LCFS.c  LCFS.h  Monkey.c  README.md  SRTN.c
Marc/: compile.sh  main.c  scheduler
Marc/Scheduling/: HRRN.c  HRRN.h  LCFS-PR.c  LCFS-PR.h  LCFS.c  MLF.c  Monkey.c  TaskQueue.c  TaskQueue.h
Marc/theorie/: 3.4.xlsx
Vorgabe/: CMakeLists.txt  compile.sh  main.c  scheduler
Vorgabe/Scheduling/: HRRN.c  HRRN.h  LCFS-PR.c  LCFS-PR.h  LCFS.c  LCFS.h  MLF.h  SRTN.c  SRTN.h  Scheduling.c  Scheduling.h
Vorgabe/Tasks/: ElementQueue.c  ElementQueue.h  TaskQueue.h
Vorgabe/scheduler.dSYM/Contents/Resources/DWARF/: scheduler
theorie/: 3.4-v01.xlsx
